# brew-story-parser

./: Cargo.toml
brew_derive_macros/: Cargo.toml
brew_derive_macros/src/: lib.rs
locales/: en.yml  ja.yml
services/src/: service.rs
src/: lib.rs  main.rs
src/common/: brew_error.rs  mod.rs
src/loading/: load_path.rs  mod.rs
src/loading/loaders/: action_loader.rs  characters_loader.rs  loadable.rs  locations_loader.rs  mod.rs  story_loader.rs  texts_loader.rs  things_loader.rs  words_loader.rs
src/parsing/: from_yml.rs  mod.rs
src/parsing/docs/: characters_doc.rs  locations_doc.rs  mergeable.rs  mod.rs  story_doc.rs  texts_doc.rs  things_doc.rs  words_doc.rs
src/parsing/parsed/: action_parsed.rs  consequence_parsed.rs  direction_parsed.rs  directions_parsed.rs  mod.rs  one_action_parsed.rs  possibility_parsed.rs  two_action_parsed.rs
src/parsing/parsers/: action_parser.rs  consequence_parser.rs  direction_parser.rs  directions_parser.rs  mod.rs  one_action_parser.rs  parse_error.rs  parseable.rs  parser_service.rs  possibility_parser.rs  regex_registry.rs  trimmable.rs  two_action_parser.rs
src/parsing/raw/: action_raw.rs  character_raw.rs  character_status_raw.rs  dictionary_raw.rs  directions_raw.rs  location_raw.rs  location_status_raw.rs  mod.rs  possibility_raw.rs  skin_raw.rs  story_raw.rs  text_raw.rs  thing_raw.rs  thing_status_raw.rs  word_raw.rs
src/services/: service_registry.rs
src/utils/files/: can_finder.rs  file_utils.rs  finder.rs  mod.rs  (+1 more)
stories/test/: story.yml  texts.yml
vati/: Cargo.toml
vati/src/: lib.rs  main.rs
(+22 files in other folders)
